--- a/index.html
+++ b/index.html
@@ -2,14 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/css/styles.css" />
     <title>Best Horror Scenes</title>
   </head>
   <body>
+    <!-- // Left View -->
+
     <header>
-      <h1>Best Horror Scenes</h1>
+      <hgroup>
+        <h1>Best</h1>
+        <h1>Horror</h1>
+        <h1>Scenes</h1>
+      </hgroup>
+      <div class="wrapper">
+        <div class="interior">
+          <p>
+            An ever growing collection featuring some of the best scenes in
+            horror.
+          </p>
+          <p>
+            “Best Horror Scenes” is a collection of scenes I feel are some of
+            the most affecting in horror. Some may be simple black cat scares,
+            others may be more subdued or nuanced. Many come from films that
+            aren't necessarily “horror” but have elements or threads of horror.
+          </p>
+          <nav>
+            <a href="#">Newsletter</a>
+            <a href="#">Suggest a Scene</a>
+            <a href="#">YouTube</a>
+            <a href="#">Twitter-X</a>
+            <a href="#">Contact</a>
+            <a href="#">RSS</a>
+            <a href="#">LetterBoxed</a>
+            <p>
+              Best Horror Scenes is a love letter to the Horror film genre by
+              Brandon Durham. Most film clips contain major spoilers, and it is
+              recommended you don’t watch the clip if you plan on seeing the
+              film.
+            </p>
+          </nav>
+        </div>
+      </div>
     </header>
+
+    <!-- Right View -->
+
+    <main>
+      <h1>hello</h1>
+    </main>
 
     <script src="/dist/js/script.js"></script>
   </body>
