finished mainview & project

--- a/index.html
+++ b/index.html
@@ -49,7 +49,52 @@
     <!-- Right View -->
 
     <main>
-      <h1>hello</h1>
+      <section>
+        <article>
+          <div class="main-header">
+            <h2>Romancham (2023)</h2>
+            <div class="main-director">
+              <p>Directed by</p>
+              <p>Keerthivasan</p>
+            </div>
+          </div>
+          <img src="assets/romancham.jpeg" alt="Romancham movie poster" />
+          <div class="rating"><p>My rating: 10/10</p></div>
+        </article>
+        <article>
+          <div class="main-header">
+            <h2>Romancham (2023)</h2>
+            <div class="main-director">
+              <p>Directed by</p>
+              <p>Keerthivasan</p>
+            </div>
+          </div>
+          <img src="assets/romancham.jpeg" alt="Romancham movie poster" />
+          <div class="rating"><p>My rating: 10/10</p></div>
+        </article>
+        <article>
+          <div class="main-header">
+            <h2>Romancham (2023)</h2>
+            <div class="main-director">
+              <p>Directed by</p>
+              <p>Keerthivasan</p>
+            </div>
+          </div>
+          <img src="assets/romancham.jpeg" alt="Romancham movie poster" />
+          <div class="rating"><p>My rating: 10/10</p></div>
+        </article>
+        <article>
+          <div class="main-header">
+            <h2>Romancham (2023)</h2>
+            <div class="main-director">
+              <p>Directed by</p>
+              <p>Keerthivasan</p>
+            </div>
+          </div>
+          <img src="assets/romancham.jpeg" alt="Romancham movie poster" />
+          <div class="rating"><p>My rating: 10/10</p></div>
+        </article>
+      </section>
     </main>
 
     <script src="/dist/js/script.js"></script>
